src/test/ui/associated-types/issue-100041.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/issue-100041.rs:9:11
   |
LL | const _: <Vec<str> as Wf>::Ty = ();
   |           ^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
note: required by a bound in `Vec`
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL
   |
LL | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
   |                ^ required by this bound in `Vec`

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/issue-100041.rs:13:9
   |
LL |     x: <Vec<str> as Wf>::Ty,
   |         ^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
note: required by a bound in `Vec`
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL
   |
LL | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
   |                ^ required by this bound in `Vec`

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/issue-100041.rs:17:12
   |
LL | fn foo(x: <Vec<str> as Wf>::Ty) {}
   |            ^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
note: required by a bound in `Vec`
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL
   |
LL | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
   |                ^ required by this bound in `Vec`

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/issue-100041.rs:20:13
   |
LL | fn bar() -> <Vec<str> as Wf>::Ty {}
   |             ^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
note: required by a bound in `Vec`
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL
   |
LL | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
   |                ^ required by this bound in `Vec`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
